# SaleAgents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  start.sh  stop.sh  test_api.py  test_api_v2.py  test_llm.py  vercel.json  咪咕网络阵地运营管理系统_回标文件_v1.docx  咪咕网络阵地运营管理系统_回标文件_v2.docx  测试用例-V1.xlsx
backend-v2/: .gitignore  TASK_BOARD_V2.md  alembic.ini  bid_agent.db  pyproject.toml  requirements.txt  sale_agents.db  sale_agents_v2.db  test_kimi_k26.py  test_llm.py  test_llm_api.py
backend-v2/agent-worklogs/: backend-agent.md
backend-v2/alembic/: env.py
backend-v2/alembic/versions/: 205a46beff81_initial_schema.py  34eefd50de02_extend_materials_table_with_category_.py  5a3549e4a73c_add_missing_columns_to_projects.py  62b79a85dd46_add_service_commitment_to_tenders.py  9eb0db679f99_add_tender_fetch_logs_table.py  a4e2d8f1b3c7_add_coalition_config_to_bidding_game.py  b34a391c0222_fix_schema_drift_add_missing_tables.py  bb2adecbb7f1_sync_schema_from_models.py  d79904bf3b48_add_async_task_table.py  ded1f9e5651c_add_pricing_tables.py  e52f1fb8f2ea_add_document_score_history_table.py  f11c2a8e9b7d_add_iterative_result_to_bidding_game.py
backend-v2/app/: __init__.py  llm_providers.example.json  main.py
backend-v2/app/api/: router.py
backend-v2/app/core/: config.py  logging_config.py  scheduler_config.py
backend-v2/app/db/: migrate_add_bidding_fields.py  migrate_create_technical_cases.py  seed_tenders.py  session.py
backend-v2/tests/: conftest.py  test_bidding_game_history_learning.py  test_parsing_local_extraction.py  test_smoke.py
(+341 files in other folders)
